--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
+
 <HTML>
     <HEAD>
          <meta charset="UTF-8">
          <meta name="viewport" content=" width=device-width,initial-scale=1.0">
          <title>fofurices</title>
+         <link rel="stylesheet" href="reset.css">         
          <link rel="stylesheet" href="styles.css">
     </HEAD>
+
     <body>
-     <H1>fofurices</H1>   
+          <header class="cabeçalho">
+            <span class="cabeçalho__manu-hanburguer"></span>
+            <img src="img/logo.svg" alt="logo da fofurices">
+            <a href="#"><img src="img/favoritos.svg"></a>
+            <a href="#"> <img src="img/compras.svg"></a>
+            <a href="#"><img src="img/usuarios.svg" ></a>
+
     </body>
+
+</HTML>
